# brainsprint

./: .gitignore  Cargo.toml  LICENSE  README.md  tauri.conf.json
.github/workflows/: release.yml
assets/: topics.json
capabilities/: default.json
docs/: BRAINSPRINT_PRD.md  PROGRESS.md
flatpak/: README.md  cargo-sources.json  io.github.vylonvygh.brainsprint.desktop  io.github.vylonvygh.brainsprint.json  io.github.vylonvygh.brainsprint.metainfo.xml
src/: lib.rs  main.rs
src/commands/: mod.rs  persist.rs
src/models/: mod.rs
src/storage/: mod.rs
src/utils/: mod.rs
ui/: index.html
ui/scripts/: app.js
ui/styles/: app.css  theme.css
